<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:background="#222"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/admin_menu_dialog_title"
            android:layout_centerInParent="true"
            android:text="@string/admin_menu_dialog_title_edit"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="closeDialog"
            android:padding="10dp"
            android:src="@drawable/close" />
    </RelativeLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <ImageView
            android:id="@+id/menu_item_imageview"
            android:onClick="addMenuPicture"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_height="100dp"
            android:src="@drawable/upload"/>

        <EditText
            android:id="@+id/d_menu_name"
            android:hint="@string/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/d_menu_price"
            android:hint="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/d_menu_des"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"/>

        <Button
            android:onClick="updateMenu"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

    </LinearLayout>


</LinearLayout>