<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:background="#222"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/review_dialog_title"
            android:layout_centerInParent="true"
            android:text="@string/review"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="closeDialog"
            android:padding="10dp"
            android:src="@drawable/close" />
    </RelativeLayout>


    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/seekbarLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_out_of_5" />

        <SeekBar
            android:id="@+id/review_dialog_rating"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:progress="3" />

        <EditText
            android:id="@+id/review_dialog_review_text"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"/>

        <Button
            android:onClick="submitReview"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>


</LinearLayout>